# michie

./: .envrc  .gitignore  .releaserc.yaml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  \  executable-dev-dependency  readme.md  rust-toolchain.toml
.github/workflows/: ci.yml  on-pull-request.yml  on-push-or-pull-request.yml  on-push-to-master-or-pr-branch.yml  on-push-to-master-or-pull-request.yml  run-a-cargo-make-task.yml  rust.yml
.history/: README_20220525101502.md  README_20220525102745.md
macro/: Cargo.toml  README.md
macro/src/: lib.rs
src/: lib.rs
tests/: dependencies.rs  readme.rs  test.rs
tests/compile_fail/: attempt_at_unhygienic_access.rs  attempt_at_unhygienic_access.stderr  failure_to_infer_store_type.rs  failure_to_infer_store_type.stderr  key_expr_span.rs  key_expr_span.stderr  key_type_mismatch.rs  key_type_mismatch.stderr  key_type_not_send_nor_sync.rs  key_type_not_send_nor_sync.stderr  key_type_not_sync.rs  key_type_not_sync.stderr  not_on_a_function.rs  not_on_a_function.stderr  on_a_const_function.rs  on_a_const_function.stderr  on_a_function_with_a_complex_return_type_and_dont_cache_errors.rs  on_a_function_with_a_complex_return_type_and_dont_cache_errors.stderr  on_a_function_with_default_return_type.rs  on_a_function_with_default_return_type.stderr  on_a_function_without_result_type_but_with_dont_cache_errors.rs  on_a_function_without_result_type_but_with_dont_cache_errors.stderr  return_type_not_send_nor_sync.rs  return_type_not_send_nor_sync.stderr  return_type_not_static.rs  return_type_not_static.stderr  return_type_not_sync.rs  return_type_not_sync.stderr  store_init_omitted_and_default_not_implemented.rs  store_init_omitted_and_default_not_implemented.stderr  store_type_generics_have_bounds.rs  store_type_generics_have_bounds.stderr  store_type_not_send_nor_sync.rs  store_type_not_send_nor_sync.stderr
