[package]
name = "michie"
version = "0.2.10"
edition = "2021"
description = "An attribute macro that adds memoization to a function (pronounced /'mikɪ/)"
repository = "https://github.com/mobusoperandi/michie"
license = "MIT"
keywords = [
    "memoization",
    "memoisation",
    "memoize",
    "memoise",
    "cache",
]
categories = [
    "caching",
]
include = [
    "/README.md",
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/tests/compile_fail/*.stderr"
]

[workspace]
members = [
    "macro"
]

[dependencies]
michie-macro = { path = "macro", version = "=0.2.10" }

[dev-dependencies]
cargo-edit = "0.9.1"
cargo-make = "0.35.12"
cargo_toml = "0.11.5"
conventional_commits_linter = "0.12.1"
itertools = "0.10.3"
jql = "4.0.4"
markdown = "0.3.0"
markdown-toc = "0.2.0"
regex = "1.5.5"
sd = "0.7.6"
semantic-release-rust = "1.0.0-alpha.8"
semver = "1.0.9"
trybuild = "1.0.56"

[features]
