[package]
name = "michie-macro"
version = "1.0.0"
edition = "2021"
description = "proc-macro crate for the michie crate"
repository = "https://github.com/mobusoperandi/michie"
license = "MIT"
keywords = [
    "memoization",
    "memoisation",
    "memoize",
    "memoise",
    "cache",
]
categories = [
    "caching",
]
include = [
    "/README.md",
    "/src/**/*.rs",
]

[lib]
proc-macro = true

[dependencies]
attribute-derive = "^0.3.1"
proc-macro2 = "^1.0.36"
quote = "^1.0.16"
syn = { version = "^1.0.86", features = ["full"] }
