[package]
name = "michie-macro"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
include = [
    "/README.md",
    "/src/**/*.rs",
]

[lib]
proc-macro = true

[dependencies]
attribute-derive = "^0.3.1"
proc-macro2 = "^1.0.36"
quote = "^1.0.16"
syn = { version = "^1.0.86", features = ["full"] }
